add AB benchmark results to readme